<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="horizontal"
    tools:context="com.exomatik.kapcake.Authentication.ActSignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_sign_in"
            android:id="@+id/img_bg"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_bg"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/width30"
                android:layout_marginRight="@dimen/width30">

                <TextView
                    android:id="@+id/text_sign_in_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:fontFamily="@font/monserrat_regular"
                    android:text="@string/sign_in1"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/title_big_font"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_sign_in_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_sign_in_1"
                    android:layout_marginTop="@dimen/margin_standard_big"
                    android:fontFamily="@font/monserrat_regular"
                    android:text="@string/sign_in2"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/title_font" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width50"
                    android:layout_below="@+id/text_sign_in_2"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/border_et_putih_hitam"
                    android:fontFamily="@font/monserrat_regular"
                    android:hint="@string/text_email"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_standard_big"
                    android:paddingRight="@dimen/margin_standard_big"
                    android:paddingTop="@dimen/margin_small"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitamGray2" />

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width50"
                    android:layout_below="@+id/et_email"
                    android:layout_marginTop="@dimen/margin_standard_big"
                    android:background="@drawable/border_et_putih_hitam"
                    android:fontFamily="@font/monserrat_regular"
                    android:hint="@string/text_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_standard_big"
                    android:paddingRight="@dimen/margin_standard_big"
                    android:paddingTop="@dimen/margin_small"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitamGray2" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width40"
                    android:layout_below="@+id/et_pass"
                    android:layout_marginTop="@dimen/width30"
                    android:background="@drawable/border_round_full_orange"
                    android:fontFamily="@font/monserrat_regular"
                    android:text="@string/text_login"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/title_font" />

                <LinearLayout
                    android:id="@+id/ln_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.3"
                        android:background="@color/putihGelap5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_standard"
                        android:layout_marginRight="@dimen/margin_standard"
                        android:text="@string/text_nothing_account"
                        android:textColor="@color/hitamGray2"
                        android:textSize="@dimen/text_font" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.3"
                        android:background="@color/putihGelap5" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width40"
                    android:layout_below="@+id/ln_center"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:background="@drawable/border_round_full_putih_orange"
                    android:fontFamily="@font/monserrat_regular"
                    android:text="@string/text_sign_up"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/title_font" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
