<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="horizontal"
    tools:context="com.exomatik.kapcake.Authentication.ActSignIn">

    <TextView
        android:id="@+id/text_sign_in_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/monserrat_regular"
        android:text="@string/teks_login"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="please login to continue using our app"
        android:textStyle="bold"
        android:textColor="@color/gray2"
        app:layout_constraintEnd_toEndOf="@+id/text_sign_in_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_sign_in_3"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_in_3" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="278dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:layout_width="374dp"
        android:layout_height="490dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/text_sign_in_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monserrat_regular"
            android:text="@string/sign_in2"
            android:textAlignment="center"
            android:textColor="@color/hitam"
            android:textSize="@dimen/title_font" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width50"
            android:layout_below="@+id/text_sign_in_2"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

<!--        <LinearLayout-->
<!--            android:id="@+id/ln_mail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/width50"-->
<!--            android:layout_marginTop="@dimen/margin_sign_in"-->
<!--            android:elevation="20dp"-->
<!--            android:orientation="horizontal">-->



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_standard"
                android:textColorHint="@color/hitamGray2"
                app:errorEnabled="true"

                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/monserrat_regular"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_standard_big"
                    android:paddingTop="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_standard_big"
                    android:paddingBottom="@dimen/margin_small"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitamGray2"
                    android:textSize="@dimen/title_font" />

            </com.google.android.material.textfield.TextInputLayout>
<!--        </LinearLayout>-->
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln_pass"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="@dimen/margin_standard"
            android:fontFamily="@font/monserrat_regular"
            android:text="Forgot Password?"
            android:textColor="@color/hitamGray2"
            android:textSize="@dimen/text_font" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width50"
            android:layout_below="@+id/ln_pass"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="272dp"
            android:background="@drawable/border_round_full_orange1"
            android:fontFamily="@font/monserrat_regular"
            android:text="@string/text_login"
            android:textColor="@color/putih"
            android:textSize="@dimen/title_font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:id="@+id/have"
            android:fontFamily="@font/monserrat_regular"
            android:text="Don't have account?"
            android:textColor="@color/hitam"
            android:textSize="@dimen/text_font" />


        <TextView
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/have"
            android:text="Sign up"
            android:textColor="@color/biru" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>